# mcp-sf-jira

./: .gitignore  README.md
config/: .env.example
docker/: .dockerignore  Dockerfile.mcp-server  Dockerfile.ui  Dockerfile.web-server  docker-compose.yml
docs/: ERROR_FIXES_SUMMARY.md  FLEXIBLE_UPDATE_CAPABILITIES.md  QUICK_QUERY_REFERENCE.md  README.md  SALESFORCE_CUSTOM_FIELDS_SETUP.md  SETUP.md  STRANDS_SDK_INTEGRATION.md  TESTING.md  USAGE.md
docs/archive/: CUSTOM_FIELDS_INTEGRATION.md  DOCKER_OPTIMIZATION.md  QUERY_PROMPT_TEMPLATES.md  SIMPLIFICATION_SUMMARY.md
python_servers/: .gitignore  DEVELOPMENT.md  ENHANCED_FEATURES.md  Makefile  README.md  enhanced_config.py  install.sh  jira_server_mcp.py  mcp_web_server.py  pyproject.toml  requirements.txt  salesforce_server_mcp.py
python_servers/archive/: jira_server_modern.py  mcp_web_server.py  mcp_web_server_subprocess.py  salesforce_server_modern.py  test_local.py  test_native.py  test_simple.py
python_servers/logs/: entity_cache.json  session_context.json
react-ui/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
react-ui/public/: index.html
react-ui/src/: App.js  index.css
react-ui/src/components/: AssistantChat.js  CreateIssueModal.js  Dashboard.js  IntegrationPanel.js  JiraPanel.js  MemoryPanel.js  SalesforcePanel.js  StatusBar.js  ThinkingIndicator.js
scripts/: create_demo_data.sh  demo_data_generator.py  demo_data_generator_simple.py  docker-build.sh  start.sh  start_native.sh
tests/: __init__.py  run_tests.py  test_imports.py  test_mcp_setup.py  test_servers.py
(+1 files in other folders)
